--- a/MDK-ARM/ProjectCube/ProjectCube.build_log.htm
+++ b/MDK-ARM/ProjectCube/ProjectCube.build_log.htm
@@ -22,20 +22,11 @@ Dialog DLL:      TCM.DLL V1.36.2.0
  
 <h2>Project:</h2>
 C:\Users\Florian\Documents\SCHULE\Diplomarbeit\Truck_Assistant\MDK-ARM\ProjectCube.uvprojx
-Project File Date:  01/03/2020
+Project File Date:  01/04/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\ARM\ARMCC\Bin'
-Rebuild target 'ProjectCube'
-assembling startup_stm32f767xx.s...
-compiling NumType_F4.c...
-compiling FuzzyV1_F4.c...
-..\Src\FuzzyV1_F4.c(226): warning:  #144-D: a value of type "const char *" cannot be used to initialize an entity of type "const signed char *"
-     FuzzyV1_F4_RuleBase_pre,
-..\Src\FuzzyV1_F4.c: 1 warning, 0 errors
-compiling fuzzy_F4.c...
-compiling usbd_conf.c...
-compiling usb_device.c...
+Build target 'ProjectCube'
 compiling main.c...
 ../Src/main.c(291): warning:  #167-D: argument of type "unsigned char *" is incompatible with parameter of type "char *restrict"
   						snprintf(velocityASCII,10000,"v %d\r",velocity[icom]) ;
@@ -44,44 +35,10 @@ compiling main.c...
 ../Src/main.c(148): warning:  #177-D: variable "setval"  was declared but never referenced
   	int setval = 0;
 ../Src/main.c: 3 warnings, 0 errors
-compiling stm32f7xx_it.c...
-compiling usbd_cdc_if.c...
-compiling usbd_desc.c...
-compiling system_stm32f7xx.c...
-compiling MY_FLASH.c...
-compiling stm32f7xx_hal_msp.c...
-compiling stm32f7xx_hal_pcd_ex.c...
-compiling stm32f7xx_hal_pcd.c...
-compiling stm32f7xx_ll_usb.c...
-compiling stm32f7xx_hal_flash.c...
-compiling stm32f7xx_hal_rcc.c...
-compiling stm32f7xx_hal_rcc_ex.c...
-compiling stm32f7xx_hal_flash_ex.c...
-compiling stm32f7xx_hal_gpio.c...
-compiling stm32f7xx_hal_dma.c...
-compiling stm32f7xx_hal_pwr.c...
-compiling stm32f7xx_hal_pwr_ex.c...
-compiling stm32f7xx_hal_dma_ex.c...
-compiling stm32f7xx_hal_cortex.c...
-compiling stm32f7xx_hal.c...
-compiling stm32f7xx_hal_i2c.c...
-compiling stm32f7xx_hal_i2c_ex.c...
-compiling stm32f7xx_hal_exti.c...
-compiling stm32f7xx_hal_adc.c...
-compiling stm32f7xx_hal_eth.c...
-compiling stm32f7xx_hal_adc_ex.c...
-compiling stm32f7xx_hal_tim.c...
-compiling stm32f7xx_hal_uart_ex.c...
-compiling stm32f7xx_hal_tim_ex.c...
-compiling stm32f7xx_hal_uart.c...
-compiling usbd_ioreq.c...
-compiling usbd_core.c...
-compiling usbd_ctlreq.c...
-compiling usbd_cdc.c...
 linking...
-Program Size: Code=29004 RO-data=1372 RW-data=560 ZI-data=74600  
+Program Size: Code=29080 RO-data=572 RW-data=960 ZI-data=74600  
 FromELF: creating hex file...
-"ProjectCube\ProjectCube.axf" - 0 Error(s), 4 Warning(s).
+"ProjectCube\ProjectCube.axf" - 0 Error(s), 3 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -104,7 +61,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.2.0
-Build Time Elapsed:  00:01:42
+Build Time Elapsed:  00:00:08
 </pre>
 </body>
 </html>
