--- a/MDK-ARM/ProjectCube/ProjectCube.build_log.htm
+++ b/MDK-ARM/ProjectCube/ProjectCube.build_log.htm
@@ -21,8 +21,8 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.6.0
 Dialog DLL:      TCM.DLL V1.36.2.0
  
 <h2>Project:</h2>
-C:\Users\Florian\Documents\SCHULE\5AHET\Diplomarbeit\Truck_Assistant\MDK-ARM\ProjectCube.uvprojx
-Project File Date:  11/20/2019
+C:\Users\Florian\Documents\SCHULE\Diplomarbeit\Truck_Assistant\MDK-ARM\ProjectCube.uvprojx
+Project File Date:  01/04/2020
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\ARM\ARMCC\Bin'
@@ -32,7 +32,7 @@ compiling main.c...
   	int setval = 0;
 ../Src/main.c: 1 warning, 0 errors
 linking...
-Program Size: Code=20844 RO-data=560 RW-data=1088 ZI-data=31424  
+Program Size: Code=24348 RO-data=1364 RW-data=1104 ZI-data=31448  
 FromELF: creating hex file...
 "ProjectCube\ProjectCube.axf" - 0 Error(s), 1 Warning(s).
 
