--- a/MDK-ARM/ProjectCube/ProjectCube.build_log.htm
+++ b/MDK-ARM/ProjectCube/ProjectCube.build_log.htm
@@ -27,14 +27,50 @@ Project File Date:  01/23/2020
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Diplomarbeit\Keilv5\ARM\ARMCC\Bin'
 Build target 'ProjectCube'
+assembling startup_stm32f767xx.s...
 compiling main.c...
-../Src/main.c(164): warning:  #177-D: variable "setval"  was declared but never referenced
+../Src/main.c(291): error:  #167: argument of type "USART_TypeDef *" is incompatible with parameter of type "UART_HandleTypeDef *"
+  		HAL_UART_Receive(USART1,buffer,sizeof(buffer),HAL_MAX_DELAY) ;
+../Src/main.c(167): warning:  #177-D: variable "setval"  was declared but never referenced
   	int setval = 0;
-../Src/main.c: 1 warning, 0 errors
-linking...
-Program Size: Code=26104 RO-data=568 RW-data=568 ZI-data=111968  
-FromELF: creating hex file...
-"ProjectCube\ProjectCube.axf" - 0 Error(s), 1 Warning(s).
+../Src/main.c: 1 warning, 1 error
+compiling usbd_cdc_if.c...
+compiling stm32f7xx_it.c...
+compiling MY_FLASH.c...
+compiling usbd_desc.c...
+compiling usb_device.c...
+compiling usbd_conf.c...
+compiling system_stm32f7xx.c...
+compiling stm32f7xx_hal_pcd_ex.c...
+compiling stm32f7xx_hal_pcd.c...
+compiling stm32f7xx_hal_msp.c...
+compiling stm32f7xx_ll_usb.c...
+compiling stm32f7xx_hal_rcc.c...
+compiling stm32f7xx_hal_rcc_ex.c...
+compiling stm32f7xx_hal_gpio.c...
+compiling stm32f7xx_hal_flash_ex.c...
+compiling stm32f7xx_hal_flash.c...
+compiling stm32f7xx_hal_pwr.c...
+compiling stm32f7xx_hal_dma.c...
+compiling stm32f7xx_hal_pwr_ex.c...
+compiling stm32f7xx_hal_dma_ex.c...
+compiling stm32f7xx_hal_cortex.c...
+compiling stm32f7xx_hal.c...
+compiling stm32f7xx_hal_i2c.c...
+compiling stm32f7xx_hal_i2c_ex.c...
+compiling stm32f7xx_hal_exti.c...
+compiling stm32f7xx_hal_adc_ex.c...
+compiling stm32f7xx_hal_adc.c...
+compiling stm32f7xx_hal_eth.c...
+compiling stm32f7xx_hal_tim_ex.c...
+compiling stm32f7xx_hal_tim.c...
+compiling stm32f7xx_hal_uart_ex.c...
+compiling stm32f7xx_hal_uart.c...
+compiling usbd_core.c...
+compiling usbd_ctlreq.c...
+compiling usbd_cdc.c...
+compiling usbd_ioreq.c...
+"ProjectCube\ProjectCube.axf" - 1 Error(s), 1 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -57,7 +93,8 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.3.0
-Build Time Elapsed:  00:00:05
+Target not created.
+Build Time Elapsed:  00:02:20
 </pre>
 </body>
 </html>
