freigabe eingefügt mit zusätzlichem status

--- a/MDK-ARM/ProjectCube/ProjectCube.build_log.htm
+++ b/MDK-ARM/ProjectCube/ProjectCube.build_log.htm
@@ -27,7 +27,18 @@ Project File Date:  02/20/2020
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Diplomarbeit\Keilv5\ARM\ARMCC\Bin'
 Build target 'ProjectCube'
-"ProjectCube\ProjectCube.axf" - 0 Error(s), 0 Warning(s).
+compiling main.c...
+../Src/main.c(181): warning:  #177-D: variable "setval"  was declared but never referenced
+  	int setval = 0;
+../Src/main.c(186): warning:  #550-D: variable "uwtick_Hold100ms_freigabe"  was set but never used
+  	static int32_t uwtick_Hold100ms_freigabe; 
+../Src/main.c(187): warning:  #550-D: variable "uwtick_Hold1s_freigabe"  was set but never used
+  	static int32_t uwtick_Hold1s_freigabe;
+../Src/main.c: 3 warnings, 0 errors
+linking...
+Program Size: Code=27084 RO-data=568 RW-data=592 ZI-data=112208  
+FromELF: creating hex file...
+"ProjectCube\ProjectCube.axf" - 0 Error(s), 3 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -50,7 +61,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.3.0
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:04
 </pre>
 </body>
 </html>
