--- a/MDK-ARM/ProjectCube/ProjectCube.build_log.htm
+++ b/MDK-ARM/ProjectCube/ProjectCube.build_log.htm
@@ -28,17 +28,19 @@ Project File Date:  02/27/2020
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'D:\Diplomarbeit\Keilv5\ARM\ARMCC\Bin'
 Build target 'ProjectCube'
 compiling main.c...
-../Src/main.c(191): warning:  #177-D: variable "setval"  was declared but never referenced
+../Src/main.c(387): warning:  #174-D: expression has no effect
+  			angle_error==1;
+../Src/main.c(193): warning:  #177-D: variable "setval"  was declared but never referenced
   	int setval = 0;
-../Src/main.c(196): warning:  #550-D: variable "uwtick_Hold100ms_freigabe"  was set but never used
+../Src/main.c(198): warning:  #550-D: variable "uwtick_Hold100ms_freigabe"  was set but never used
   	static int32_t uwtick_Hold100ms_freigabe; 
-../Src/main.c(197): warning:  #550-D: variable "uwtick_Hold1s_freigabe"  was set but never used
+../Src/main.c(199): warning:  #550-D: variable "uwtick_Hold1s_freigabe"  was set but never used
   	static int32_t uwtick_Hold1s_freigabe;
-../Src/main.c: 3 warnings, 0 errors
+../Src/main.c: 4 warnings, 0 errors
 linking...
-Program Size: Code=27788 RO-data=568 RW-data=608 ZI-data=112320  
+Program Size: Code=27860 RO-data=568 RW-data=612 ZI-data=112356  
 FromELF: creating hex file...
-"ProjectCube\ProjectCube.axf" - 0 Error(s), 3 Warning(s).
+"ProjectCube\ProjectCube.axf" - 0 Error(s), 4 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -61,7 +63,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.3.0
-Build Time Elapsed:  00:00:06
+Build Time Elapsed:  00:00:04
 </pre>
 </body>
 </html>
